--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             width: 100%;
             max-width: 350px;
             height: auto;
-            margin-top: 20px;
+            margin-top: 50px;
         }
         table {
             width: 100%;
@@ -149,7 +149,10 @@
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td>Length Open dia:7.5 Max Dia:17cm x Width cm x Height 23cm</td>
+                    <td>Open Dia:7.5<br> 
+						Max Dia:17cm<br>
+						Height 23cm
+					</td>
                 </tr>
                 <tr>
                     <th>Product CBM</th>
@@ -208,3 +211,4 @@
     </div>
 </body>
 </html>
+
